--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -41,7 +42,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span> 
-            <img style="width: 80px; height: 80px;"  src="images/af_logo_flor_de_lotus_redondo.png">
+            <img style="width: 80px; height: 80px;" class="img-centro"  src="images/af_logo_flor_de_lotus_redondo.png">
           </span>
         </a>
         <div class="" id="">
@@ -108,7 +109,7 @@
       <div class="col-md-8 col-lg-6 mx-auto">
         <div class="inner_detail-box">
           <h1>
-            <img style="max-height: 150px; max-width: 420px;" src="images/af_logo_flor_de_lotus_horizontal_B.png">
+            <img style="max-height: 150px; max-width: 420px;" class="img-centralizada" src="images/af_logo_flor_de_lotus_horizontal_B.png">
           </h1>
           <p>
             Conforto que se molda ao seu estilo de vida! aqui  cada detalhe é pensado para oferecer praticidade e aconchego. Transforme seu ambiente em um refúgio elegante e funcional, onde o design se une ao conforto para tornar o seu dia a dia mais prazeroso.
@@ -131,7 +132,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img style="width: 400px; height: 400px; border-radius: 200px;"  src="images/floor-plan-1857175.jpg">
+            <img style="width: 400px; height: 400px; border-radius: 200px;" class="img-projeto"  src="images/floor-plan-1857175.jpg">
           </div>
         </div>
         <div class="col-md-6">
