feat: change page info display under images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </a>
         <div class="" id="">
 
-          <div class="custom_menu-btn">
+          <dx`iv class="custom_menu-btn">
             <button onclick="openNav()">
               <span class="s-1"> </span>
               <span class="s-2"> </span>
@@ -59,9 +59,12 @@
                 <a href="about.html">Quem Somos</a>
                 <a href="gallery.html">Galeria</a>
                 <a href="service.html">Serviços</a> 
+              
+                  <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">Fale Conosco</a>
+                
               </div>
             </div>
-          </div>
+          </dx>
         </div>
       </nav>
     </div>
