--- a/service.html
+++ b/service.html
@@ -55,6 +55,8 @@
                 <a href="about.html">Quem Somos</a>
                 <a href="gallery.html">Galeria</a>
                 <a href="service.html">Serviços</a> 
+                <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">Fale Conosco</a>
+
               </div>
             </div>
           </div>
