feat: add whatsapp button on homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </a>
         <div class="" id="">
 
-          <dx`iv class="custom_menu-btn">
+          <div class="custom_menu-btn">
             <button onclick="openNav()">
               <span class="s-1"> </span>
               <span class="s-2"> </span>
@@ -64,7 +64,12 @@
                 
               </div>
             </div>
-          </dx>
+          </div>
+          <div class="custom_menu-btn whatsapp">
+            <button >
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+            </button>
+          </div>
         </div>
       </nav>
     </div>
