wip: alteracoes site flor de lotus

--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="icon" href="images/favicon.png" type="image/gif" />
 
-  <title>Shapel</title>
+  <title>Flor de lotus do Brasil</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -78,37 +78,37 @@
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2>
-          Gallery
+          Galeria
         </h2>
       </div>
       <div class="row">
         <div class=" col-sm-8 col-md-6 px-0">
           <div class="img-box">
-            <img src="images/g1.jpg" alt="">
-            <a href="images/g1.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g1.png" alt="">
+            <a href="images/g1.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-4 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g2.jpg" alt="">
-            <a href="images/g2.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g2.png" alt="">
+            <a href="images/g2.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g3.jpg" alt="">
-            <a href="images/g3.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g3.png" alt="">
+            <a href="images/g3.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g4.jpg" alt="">
+            <img src="images/g4.png" alt="">
             <a href="images/g4.jpg" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
@@ -116,16 +116,64 @@
         </div>
         <div class="col-sm-4 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g5.jpg" alt="">
-            <a href="images/g5.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g5.png" alt="">
+            <a href="images/g5.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-8 col-md-6 px-0">
           <div class="img-box">
-            <img src="images/g6.jpg" alt="">
-            <a href="images/g6.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g6.png" alt="">
+            <a href="images/g6.png" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D0.JPG" alt="">
+            <a href="images/_D0.JPG" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D9.JPG" alt="">
+            <a href="images/_D9.JPG" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D2.JPG" alt="">
+            <a href="images/_D2.JPG" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D4.JPG" alt="">
+            <a href="images/_D4.JPG" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D6.JPG" alt="">
+            <a href="images/_D6.JPG" data-toggle="lightbox" data-gallery="gallery">
+              <i class="fa fa-picture-o" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-6 px-0">
+          <div class="img-box">
+            <img src="images/_D1.JPG" alt="">
+            <a href="images/_D1.JPG" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
@@ -133,7 +181,7 @@
       </div>
       <div class="btn-box">
         <a href="">
-          View All
+          Ver Tudo
         </a>
       </div>
     </div>
@@ -141,9 +189,10 @@
 
   <!-- end gallery section -->
 
+ <!-- end contact section -->
 
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section "  >
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -151,65 +200,42 @@
             <h4>
               <a href="index.html" class="navbar-brand m-0 p-0">
                 <span>
-                  Shapel
+                  Flor de lótus do Brasil
                 </span>
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              Proporcione para a sua familia mais conforto, qualidade de vida e espaço para viver bem!
             </p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_detail">
-            <h4>
-              Company
-            </h4>
-            <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
-            </p>
-          </div>
+        <div   class="col-md-6 col-lg-3">
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Entre em contato
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                <a href="https://maps.app.goo.gl/YcYv3PRQFhEEGGwZ8">               <i class="fa fa-map-marker" aria-hidden="true"></i>
+                   Localizacao</a>
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope"></i>
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
+                Ligue (65) 9 9642-1898
+               </span>
+            </a> 
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Nos siga nas rede sociais!
           </h4>
-          <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
+          <div class="social_box"> 
+            <a href="https://www.instagram.com/flordelotusdobrasil/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -225,8 +251,8 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> Development by EBS Tech:
+        <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">EBS Tech </a>
       </p>
     </div>
   </footer>
