--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
         <div class="carousel-item active">
           <div class="img_container">
             <div class="img-box">
-              <img src="images/architecture-2141045_1920.jpg" class="" alt="...">
+              <img src="images/_DSC2461.png" class="" alt="...">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="img_container">
             <div class="img-box">
-              <img src="images/furniture-998265.jpg" class="" alt="...">
+              <img src="images/_DSC2601.png" class="" alt="...">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="img_container">
             <div class="img-box">
-              <img src="images/slider-bg.jpg" class="" alt="...">
+              <img src="images/_DSC2782.JPG" class="" alt="...">
             </div>
           </div>
         </div>
@@ -151,7 +151,7 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              Nossa jornada começou com a vontade de oferecer soluções únicas e personalizadas para quem busca o melhor. Com anos de experiência e um olhar atento às últimas tendências e aos materiais mais nobres, dedicamo-nos a entender a fundo os sonhos e as necessidades de cada cliente.
             </p> 
           </div>
         </div>
@@ -173,48 +173,48 @@
       <div class="row">
         <div class=" col-sm-8 col-md-6 px-0">
           <div class="img-box">
-            <img src="images/g1.jpg" alt="">
-            <a href="images/g1.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g1.png" alt="">
+            <a href="images/g1.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-4 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g2.jpg" alt="">
-            <a href="images/g2.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g2.png" alt="">
+            <a href="images/g2.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g3.jpg" alt="">
-            <a href="images/g3.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g3.png" alt="">
+            <a href="images/g3.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g4.jpg" alt="">
-            <a href="images/g4.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g4.png" alt="">
+            <a href="images/g4.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-4 col-md-3 px-0">
           <div class="img-box">
-            <img src="images/g5.jpg" alt="">
-            <a href="images/g5.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g5.png" alt="">
+            <a href="images/g5.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <div class="col-sm-8 col-md-6 px-0">
           <div class="img-box">
-            <img src="images/g6.jpg" alt="">
-            <a href="images/g6.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/g6.png" alt="">
+            <a href="images/g6.png" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
@@ -232,61 +232,51 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Services
+          Serviços
         </h2>
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-4 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/s1.jpg" alt="">
+              <img src="images/_DSC2788.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Consultoria e Design Personalizado
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Entendimento profundo das suas necessidades, projeto 3D detalhado, seleção de materiais nobres.              </p>
+               
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/s2.jpg" alt="">
+              <img src="images/_DSC2793.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Soluções Sob Medida e Design Exclusivo
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Móveis planejados personalizados, design exclusivo, otimização do espaço, atendimento às necessidades específicas.              </p>
+            
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <div class="box">
+          <div class="box ">
             <div class="img-box">
-              <img src="images/s3.jpg" alt="">
+              <img src="images/_DSC2805.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Transformando Espaços de Trabalho em Ambientes Inspiradores
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Crie uma imagem profissional e memorável para sua empresa. Decoração de escritórios que reflete sua identidade.              
             </div>
           </div>
         </div>
@@ -342,18 +332,16 @@
               <div class="col-md-11 col-lg-10 mx-auto">
                 <div class="box">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="" />
+                    <img src="https://images.pexels.com/photos/1239288/pexels-photo-1239288.jpeg?auto=compress&cs=tinysrgb&w=600&h=550&dpr=1" alt="" />
                   </div>
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Siaalya
+                        Mariana Silva
                       </h6>
                     </div>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
+                      Desde que instalamos os móveis planejados da Flor de Lotus na nossa casa, parece que tudo ficou mais organizado e aconchegante. A equipe foi super atenciosa e o design ficou exatamente como sonhávamos. Recomendo de olhos fechados!"
                     </p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                   </div>
@@ -371,13 +359,11 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Siaalya
+                        Carlos Mendes
                       </h6>
                     </div>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
+                      Precisávamos de um espaço de trabalho moderno e funcional para nossa nova sede. A Flor de Lotus superou nossas expectativas! O projeto ficou elegante e otimizou muito a produtividade da equipe. Ótimo atendimento e qualidade impecável.
                     </p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                   </div>
@@ -447,7 +433,7 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              Proporcione para a sua familia mais conforto, qualidade de vida e espaço para viver bem!
             </p>
           </div>
         </div>
@@ -459,40 +445,25 @@
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                <a href="https://maps.app.goo.gl/YcYv3PRQFhEEGGwZ8">               <i class="fa fa-map-marker" aria-hidden="true"></i>
+                   Localizacao</a>
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope"></i>
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
+                Ligue (65) 9 9642-1898
+               </span>
+            </a> 
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Nos siga nas rede sociais!
           </h4>
-          <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
+          <div class="social_box"> 
+            <a href="https://www.instagram.com/flordelotusdobrasil/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -508,7 +479,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> Development by:
+        &copy; <span id="displayYear"></span> Development by EBS Tech:
         <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">EBS Tech </a>
       </p>
     </div>
