--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="icon" href="images/favicon.png" type="image/gif" />
 
-  <title>Shapel</title>
+  <title>Flor de Lotus do Brasil</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -72,61 +72,51 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Services
+          Serviços
         </h2>
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-4 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/s1.jpg" alt="">
+              <img src="images/_DSC2788.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Consultoria e Design Personalizado
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Entendimento profundo das suas necessidades, projeto 3D detalhado, seleção de materiais nobres.              </p>
+               
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/s2.jpg" alt="">
+              <img src="images/_DSC2793.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Soluções Sob Medida e Design Exclusivo
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Móveis planejados personalizados, design exclusivo, otimização do espaço, atendimento às necessidades específicas.              </p>
+            
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <div class="box">
+          <div class="box ">
             <div class="img-box">
-              <img src="images/s3.jpg" alt="">
+              <img src="images/_DSC2805.JPG" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Transformando Espaços de Trabalho em Ambientes Inspiradores
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Crie uma imagem profissional e memorável para sua empresa. Decoração de escritórios que reflete sua identidade.              
             </div>
           </div>
         </div>
@@ -137,8 +127,10 @@
 
   <!-- end service section -->
 
+ <!-- end contact section -->
+
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section "  >
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -146,65 +138,42 @@
             <h4>
               <a href="index.html" class="navbar-brand m-0 p-0">
                 <span>
-                  Shapel
+                  Flor de lótus do Brasil
                 </span>
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              Proporcione para a sua familia mais conforto, qualidade de vida e espaço para viver bem!
             </p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_detail">
-            <h4>
-              Company
-            </h4>
-            <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
-            </p>
-          </div>
+        <div   class="col-md-6 col-lg-3">
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Entre em contato
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                <a href="https://maps.app.goo.gl/YcYv3PRQFhEEGGwZ8">               <i class="fa fa-map-marker" aria-hidden="true"></i>
+                   Localizacao</a>
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope"></i>
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
+                Ligue (65) 9 9642-1898
+               </span>
+            </a> 
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Nos siga nas rede sociais!
           </h4>
-          <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
+          <div class="social_box"> 
+            <a href="https://www.instagram.com/flordelotusdobrasil/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -220,13 +189,12 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> Development by EBS Tech:
+        <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">EBS Tech </a>
       </p>
     </div>
   </footer>
   <!-- footer section -->
-
 
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
