--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/g3.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -86,11 +86,8 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
-            </p>
-            <a href="">
-              Read More
-            </a>
+              Nossa jornada começou com a vontade de oferecer soluções únicas e personalizadas para quem busca o melhor. Com anos de experiência e um olhar atento às últimas tendências e aos materiais mais nobres, dedicamo-nos a entender a fundo os sonhos e as necessidades de cada cliente.            </p>
+            
           </div>
         </div>
       </div>
@@ -100,8 +97,10 @@
   <!-- end about section -->
 
 
+   <!-- end contact section -->
+
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section "  >
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -109,65 +108,42 @@
             <h4>
               <a href="index.html" class="navbar-brand m-0 p-0">
                 <span>
-                  Shapel
+                  Flor de lótus do Brasil
                 </span>
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              Proporcione para a sua familia mais conforto, qualidade de vida e espaço para viver bem!
             </p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_detail">
-            <h4>
-              Company
-            </h4>
-            <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
-            </p>
-          </div>
+        <div   class="col-md-6 col-lg-3">
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Entre em contato
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                <a href="https://maps.app.goo.gl/YcYv3PRQFhEEGGwZ8">               <i class="fa fa-map-marker" aria-hidden="true"></i>
+                   Localizacao</a>
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope"></i>
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
+                Ligue (65) 9 9642-1898
+               </span>
+            </a> 
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Nos siga nas rede sociais!
           </h4>
-          <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
+          <div class="social_box"> 
+            <a href="https://www.instagram.com/flordelotusdobrasil/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -183,8 +159,8 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> Development by EBS Tech:
+        <a href="https://whatsa.me/5565984193431/?t=ola!%20gostaria%20de%20um%20or%C3%A7amento...">EBS Tech </a>
       </p>
     </div>
   </footer>
